# etorro-trading-assistant

./: .env.example  .gitignore  AGENTS.md  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.github/: MOLTBOOK.md  MOLTBOOK_DEMO.md  PULL_REQUEST_TEMPLATE.md  README.md  copilot-instructions.md
.github/workflows/: pytest.yml
scripts/: init_db.py  mock_portfolio.py  run_pipeline.py  verify_market_data.py  verify_portfolio.py
skills/moltbook/: SKILL.md
src/agent/: config.py  orchestrator.py  types.py
src/agent/db/: __init__.py  candles.py  connection.py  instruments.py  reports.py  schema.py  snapshots.py  utils.py
src/agent/etoro/: __init__.py  client.py  market_data.py  models.py  portfolio.py
tests/: conftest.py  test_db_candles.py  test_db_connection.py  test_db_instruments.py  test_db_reports.py  test_db_schema.py  test_db_snapshots.py  test_db_utils.py  test_etoro_client.py  test_market_data.py  test_orchestrator.py  test_portfolio.py  test_smoke.py
