[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etoro-trading-agent"
version = "0.1.0"
description = "Advisory trading agent for eToro with SurrealDB persistence"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "surrealdb>=0.4",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pandas>=2.0",
    "structlog>=24.0",
    "openai>=1.0",
    "anthropic>=0.40",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
